--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-ui-router": "~0.2.0",
     "angular": "~1.2.0",
     "angular-animate": "~1.2.0",
-    "font-awesome": "~4.0.3"
+    "font-awesome": "~4.0.3",
+    "angular-ui-select2": "~0.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
