--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,8 @@
     "json3": "~3.2.4",
     "jquery": "~2.0.3",
     "es5-shim": "~2.0.8",
-    "foundation": "~4.3.2",
-    "angular-ui-router": "~0.2.0",
+    "foundation": "~5.0.3",
+    "angular-ui-router": "~0.2.8",
     "angular": "~1.2.0",
     "angular-animate": "~1.2.0",
     "font-awesome": "~4.0.3",
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
-    "angular-scenario": "~1.0.7"
+    "angular-scenario": "~1.0.7",
+    "jquery-ui": "~1.10.3"
   }
 }
