--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "karma": "~0.10.4",
     "karma-ng-html2js-preprocessor": "~0.1.0",
     "grunt-karma": "~0.6.2",
-    "grunt-connect-proxy": "~0.1.6"
+    "grunt-connect-proxy": "~0.1.6",
+    "grunt-sass": "~0.10.0"
   },
   "engines": {
     "node": ">=0.8.0"
