--- a/.jshintrc
+++ b/.jshintrc
@@ -7,8 +7,8 @@
     "curly": true,
     "eqeqeq": true,
     "immed": true,
-    "indent": 4,
-    "latedef": true,
+    "indent": 2,
+    "latedef": false,
     "newcap": true,
     "noarg": true,
     "quotmark": "single",
@@ -17,5 +17,10 @@
     "strict": true,
     "trailing": true,
     "smarttabs": true,
-    "jquery": true
+    "jquery": true,
+    "globals": {
+        "angular": true,
+        "SockJS": true,
+        "d3": true
+    }
 }
